removed uarial packae for texlife users

--- a/src/letter.tex
+++ b/src/letter.tex
@@ -5,7 +5,7 @@ fromrule=false, draft=true]{scrlttr2}
 \usepackage[ngerman]{babel}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
-\usepackage[scaled]{uarial}
+
 
 \RequirePackage{graphicx}
 
@@ -20,7 +20,7 @@ fromrule=false, draft=true]{scrlttr2}
 \setkomavar{subject}{Betreff}
 
 \begin{document}
-	\fontfamily{ua1}\fontseries{m}\fontsize{10}{11.5}\selectfont
+	\fontfamily{cmss}\fontseries{m}\fontsize{10}{11.5}\selectfont
 
 	\begin{letter}{Firma \\ Herr Name Vorname \\ Strasse 11  \\ CH-PLZ
 	Ort}
