swiched fornt to adobe helvetica

--- a/src/letter.tex
+++ b/src/letter.tex
@@ -20,7 +20,7 @@ fromrule=false, draft=true]{scrlttr2}
 \setkomavar{subject}{Betreff}
 
 \begin{document}
-	\fontfamily{cmss}\fontseries{m}\fontsize{10}{11.5}\selectfont
+	\fontfamily{phv}\fontseries{m}\fontsize{10}{11.5}\selectfont
 
 	\begin{letter}{Firma \\ Herr Name Vorname \\ Strasse 11  \\ CH-PLZ
 	Ort}
